[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tonic-prost = "0.14.2"
async-trait = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.0"